# glaucoma-screening

./: .gitignore  README.md
classification/: main.py  pyproject.toml
classification/JustRAIGS/: __init__.py  datamodule.py  dataset.py
classification/callbacks/: BackboneEarlyStopping.py  CustomFinetuning.py  MetricsCallback.py  __init__.py
classification/classifiers/: BaseClassifier.py  ConvNeXt.py  EfficientNet.py  ResNet.py  SwinTransformer.py  __init__.py
disc-location/: pyproject.toml
disc-location/src/: convert_tf2onnx.py  crop_disc.py  disc_seg_model.py  square_images.py  utils.py
